reca3team-back-was-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was-server
  template:
    metadata:
      labels:
        app: was-server
    spec:
      containers:
      - name: reca3team-was-server
        image: beenlee0930/mycicd-tomcat
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
