reca3team-front-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: reca3team-web-server
          image: beenlee0930/mycicd-nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
