reca3team-back-final.yaml
apiVersion: v1
kind: Service
metadata:
  name: reca3team-was-server
  labels:
    app: was-server
spec:
  type: ClusterIP
  selector:
    app: was-server
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was-server
  template:
    metadata:
      labels:
        app: was-server
    spec:
      containers:
      - name: reca3team-was-server
        image: beenlee0930/mycicd-tomcat
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: reca3team-was-efs
