reca3team-back-was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reca3team-was-server
  labels:
    app: was-server
spec:
  type: ClusterIP
  selector:
    app: was-server
  ports:
  - port: 8080
    targetPort: 8080
