reca3team-front-final.yaml
apiVersion: v1
kind: Service
metadata:
  name: reca3team-web-server
  labels:
    app: web-server
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: reca3team-web-server
          image: 447079561480.dkr.ecr.ap-northeast-2.amazonaws.com/reca3team-ecr:RECA3team-ecr-nginx-image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          volumeMounts:
            - name: persistent-storage
              mountPath: /data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: reca3team-web-efs
