reca3team-front-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reca3team-web-server
  labels:
    app: web-server
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
